--- a/animation-component/shape.html
+++ b/animation-component/shape.html
@@ -36,6 +36,8 @@
             <div id="js-sec-text" class="alert-sec-text"></div>
         </svg>
     </div>
+    <!--loader-->
+
 <!--60秒倒计时-->
 <script>
     (function() {
