--- a/demo-coding/shape.html
+++ b/demo-coding/shape.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!--头部-->
-    <header class="header">css小部件</header>
+    <header class="header">test all</header>
     
     <!--QQ对话 使用伪类-->
     <div class="wrapper">
@@ -37,6 +37,14 @@
         </svg>
     </div>
     <!--loader-->
+    
+    <!--处理素数
+    ** 素数: 只有1和本身两个因素的自然数
+    -->
+    <div class="isprime">
+        <em>请输入值</em>
+        <input type="" name="" value="请输入任意正整数" />
+    </div>
 
 <!--60秒倒计时-->
 <script>
