--- a/someCodeing/shape.html
+++ b/someCodeing/shape.html
@@ -39,23 +39,11 @@
         </div>
         <!--loader-->
     </section>
-    <!--处理素数
-    ** 素数: 只有1和本身两个因素的自然数
-    -->
-    <div class="isPrime">
-        <em>请输入值</em>
-        <input type="" name="" value="请输入任意正整数" />
-        <span class="trueOrFalse"></span>
-    </div>
 
-    <script type="text/javascript">
-        //判断是否为素数
-        (function(){    
-
-        })();
-
-    </script>
-
+    <!--scanvans-->    
+    <section class="canvasCont">
+        
+    </section>
 
     <!--60秒倒计时-->
     <script>
